sumo/tests/sumo/extended/rerouter/errors/xml/destprob_double_attribute/errors.sumo
Error: The attribute 'id' is already used in element 'dest_prob_reroute'
 In file 'input_definition.def.xml'
 At line/column 4/34.

Quitting (on error).
